Added support for all models

--- a/getModelFromAddress.ipynb
+++ b/getModelFromAddress.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,14 +28,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'results': [{'attrs': {'detail': 'widmergasse 19 8466 truellikon 40 truellikon ch zh', 'featureId': '12870_0', 'geom_quadindex': '012232210032122231000', 'geom_st_box2d': 'BOX(694347.29027415 276686.7814323578,694347.29027415 276686.7814323578)', 'label': 'Widmergasse 19 <b>8466 Trüllikon</b>', 'lat': 47.63404846191406, 'lon': 8.694016456604004, 'num': 19, 'objectclass': '', 'origin': 'address', 'rank': 7, 'x': 276686.78125, 'y': 694347.3125, 'zoomlevel': 10}, 'id': 7251, 'weight': 1}, {'attrs': {'detail': 'widmergasse 19.1 8466 truellikon 40 truellikon ch zh', 'featureId': '210226908_0', 'geom_quadindex': '012232210032122310321', 'geom_st_box2d': 'BOX(694360.3364026649 276691.3415635696,694360.3364026649 276691.3415635696)', 'label': 'Widmergasse 19.1 <b>8466 Trüllikon</b>', 'lat': 47.634090423583984, 'lon': 8.694190979003906, 'num': 191, 'objectclass': '', 'origin': 'address', 'rank': 7, 'x': 276691.34375, 'y': 694360.3125, 'zoomlevel': 10}, 'id': 2190619, 'weight': 8}, {'attrs': {'detail': 'widmergasse 19.2 8466 truellikon 40 truellikon ch zh', 'featureId': '210226972_0', 'geom_quadindex': '012232210032301021330', 'geom_st_box2d': 'BOX(694372.001495032 276669.4795108603,694372.001495032 276669.4795108603)', 'label': 'Widmergasse 19.2 <b>8466 Trüllikon</b>', 'lat': 47.63389205932617, 'lon': 8.694341659545898, 'num': 192, 'objectclass': '', 'origin': 'address', 'rank': 7, 'x': 276669.46875, 'y': 694372.0, 'zoomlevel': 10}, 'id': 2181664, 'weight': 8}]}\n"
+      "{'results': [{'attrs': {'detail': 'widmergasse 19 8466 truellikon 40 truellikon ch zh', 'featureId': '12870_0', 'geom_quadindex': '012232210032122231000', 'geom_st_box2d': 'BOX(694347.29027415 276686.7814323578,694347.29027415 276686.7814323578)', 'label': 'Widmergasse 19 <b>8466 Trüllikon</b>', 'lat': 47.63404846191406, 'lon': 8.694016456604004, 'num': 19, 'objectclass': '', 'origin': 'address', 'rank': 7, 'x': 276686.78125, 'y': 694347.3125, 'zoomlevel': 10}, 'id': 7017, 'weight': 1}, {'attrs': {'detail': 'widmergasse 19.1 8466 truellikon 40 truellikon ch zh', 'featureId': '210226908_0', 'geom_quadindex': '012232210032122310321', 'geom_st_box2d': 'BOX(694360.3364026649 276691.3415635696,694360.3364026649 276691.3415635696)', 'label': 'Widmergasse 19.1 <b>8466 Trüllikon</b>', 'lat': 47.634090423583984, 'lon': 8.694190979003906, 'num': 191, 'objectclass': '', 'origin': 'address', 'rank': 7, 'x': 276691.34375, 'y': 694360.3125, 'zoomlevel': 10}, 'id': 2125786, 'weight': 8}, {'attrs': {'detail': 'widmergasse 19.2 8466 truellikon 40 truellikon ch zh', 'featureId': '210226972_0', 'geom_quadindex': '012232210032301021330', 'geom_st_box2d': 'BOX(694372.001495032 276669.4795108603,694372.001495032 276669.4795108603)', 'label': 'Widmergasse 19.2 <b>8466 Trüllikon</b>', 'lat': 47.63389205932617, 'lon': 8.694341659545898, 'num': 192, 'objectclass': '', 'origin': 'address', 'rank': 7, 'x': 276669.46875, 'y': 694372.0, 'zoomlevel': 10}, 'id': 2122384, 'weight': 8}]}\n"
      ]
     }
    ],
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
     {
@@ -94,7 +94,7 @@
        "            &lt;meta name=&quot;viewport&quot; content=&quot;width=device-width,\n",
        "                initial-scale=1.0, maximum-scale=1.0, user-scalable=no&quot; /&gt;\n",
        "            &lt;style&gt;\n",
-       "                #map_9338cc5010a7f0c3eda85de81ca3d8c9 {\n",
+       "                #map_8b975b7fcb962345f99cded064b99483 {\n",
        "                    position: relative;\n",
        "                    width: 100.0%;\n",
        "                    height: 100.0%;\n",
@@ -108,14 +108,14 @@
        "&lt;body&gt;\n",
        "    \n",
        "    \n",
-       "            &lt;div class=&quot;folium-map&quot; id=&quot;map_9338cc5010a7f0c3eda85de81ca3d8c9&quot; &gt;&lt;/div&gt;\n",
+       "            &lt;div class=&quot;folium-map&quot; id=&quot;map_8b975b7fcb962345f99cded064b99483&quot; &gt;&lt;/div&gt;\n",
        "        \n",
        "&lt;/body&gt;\n",
        "&lt;script&gt;\n",
        "    \n",
        "    \n",
-       "            var map_9338cc5010a7f0c3eda85de81ca3d8c9 = L.map(\n",
-       "                &quot;map_9338cc5010a7f0c3eda85de81ca3d8c9&quot;,\n",
+       "            var map_8b975b7fcb962345f99cded064b99483 = L.map(\n",
+       "                &quot;map_8b975b7fcb962345f99cded064b99483&quot;,\n",
        "                {\n",
        "                    center: [47.63404846191406, 8.694016456604004],\n",
        "                    crs: L.CRS.EPSG3857,\n",
@@ -129,73 +129,73 @@
        "\n",
        "        \n",
        "    \n",
-       "            var tile_layer_7fe0d5cd4f11cfa87a5f46fdcc6a53f1 = L.tileLayer(\n",
+       "            var tile_layer_1ab912f6c7f6fd00dee6e3517d7940c8 = L.tileLayer(\n",
        "                &quot;https://tile.openstreetmap.org/{z}/{x}/{y}.png&quot;,\n",
        "                {&quot;attribution&quot;: &quot;\\u0026copy; \\u003ca href=\\&quot;https://www.openstreetmap.org/copyright\\&quot;\\u003eOpenStreetMap\\u003c/a\\u003e contributors&quot;, &quot;detectRetina&quot;: false, &quot;maxNativeZoom&quot;: 19, &quot;maxZoom&quot;: 19, &quot;minZoom&quot;: 0, &quot;noWrap&quot;: false, &quot;opacity&quot;: 1, &quot;subdomains&quot;: &quot;abc&quot;, &quot;tms&quot;: false}\n",
        "            );\n",
        "        \n",
        "    \n",
-       "            tile_layer_7fe0d5cd4f11cfa87a5f46fdcc6a53f1.addTo(map_9338cc5010a7f0c3eda85de81ca3d8c9);\n",
+       "            tile_layer_1ab912f6c7f6fd00dee6e3517d7940c8.addTo(map_8b975b7fcb962345f99cded064b99483);\n",
        "        \n",
        "    \n",
-       "            var marker_12ee40dd52a1e922ab21664f12f98529 = L.marker(\n",
+       "            var marker_dc368257ca563fc4a5d8c923a325bde1 = L.marker(\n",
        "                [47.63404846191406, 8.694016456604004],\n",
        "                {}\n",
-       "            ).addTo(map_9338cc5010a7f0c3eda85de81ca3d8c9);\n",
+       "            ).addTo(map_8b975b7fcb962345f99cded064b99483);\n",
        "        \n",
        "    \n",
-       "        var popup_ead37a2d4e9775b868202a3813a7ca34 = L.popup({&quot;maxWidth&quot;: &quot;100%&quot;});\n",
+       "        var popup_6d61fb4228bf24137f9aafba61b37cf8 = L.popup({&quot;maxWidth&quot;: &quot;100%&quot;});\n",
        "\n",
        "        \n",
        "            \n",
-       "                var html_a99aef67a5596bab14462c5587576053 = $(`&lt;div id=&quot;html_a99aef67a5596bab14462c5587576053&quot; style=&quot;width: 100.0%; height: 100.0%;&quot;&gt;Index: 0&lt;/div&gt;`)[0];\n",
-       "                popup_ead37a2d4e9775b868202a3813a7ca34.setContent(html_a99aef67a5596bab14462c5587576053);\n",
+       "                var html_7fc8dabd7827c7f86283bcb50d7302f7 = $(`&lt;div id=&quot;html_7fc8dabd7827c7f86283bcb50d7302f7&quot; style=&quot;width: 100.0%; height: 100.0%;&quot;&gt;Index: 0&lt;/div&gt;`)[0];\n",
+       "                popup_6d61fb4228bf24137f9aafba61b37cf8.setContent(html_7fc8dabd7827c7f86283bcb50d7302f7);\n",
        "            \n",
        "        \n",
        "\n",
-       "        marker_12ee40dd52a1e922ab21664f12f98529.bindPopup(popup_ead37a2d4e9775b868202a3813a7ca34)\n",
+       "        marker_dc368257ca563fc4a5d8c923a325bde1.bindPopup(popup_6d61fb4228bf24137f9aafba61b37cf8)\n",
        "        ;\n",
        "\n",
        "        \n",
        "    \n",
        "    \n",
-       "            var marker_94e66050864bf895f7a0cef3aa2f9838 = L.marker(\n",
+       "            var marker_3b68215f0baefff2387f476653589e8f = L.marker(\n",
        "                [47.634090423583984, 8.694190979003906],\n",
        "                {}\n",
-       "            ).addTo(map_9338cc5010a7f0c3eda85de81ca3d8c9);\n",
+       "            ).addTo(map_8b975b7fcb962345f99cded064b99483);\n",
        "        \n",
        "    \n",
-       "        var popup_1a1ed9f4780f17ec083bbc8f3bf13662 = L.popup({&quot;maxWidth&quot;: &quot;100%&quot;});\n",
+       "        var popup_a9add213e6870f6d6dacf7b2a475b8aa = L.popup({&quot;maxWidth&quot;: &quot;100%&quot;});\n",
        "\n",
        "        \n",
        "            \n",
-       "                var html_56b271d825507d6511192830bacfb6c3 = $(`&lt;div id=&quot;html_56b271d825507d6511192830bacfb6c3&quot; style=&quot;width: 100.0%; height: 100.0%;&quot;&gt;Index: 1&lt;/div&gt;`)[0];\n",
-       "                popup_1a1ed9f4780f17ec083bbc8f3bf13662.setContent(html_56b271d825507d6511192830bacfb6c3);\n",
+       "                var html_092c81be6bd2bd8940bafc18da59150b = $(`&lt;div id=&quot;html_092c81be6bd2bd8940bafc18da59150b&quot; style=&quot;width: 100.0%; height: 100.0%;&quot;&gt;Index: 1&lt;/div&gt;`)[0];\n",
+       "                popup_a9add213e6870f6d6dacf7b2a475b8aa.setContent(html_092c81be6bd2bd8940bafc18da59150b);\n",
        "            \n",
        "        \n",
        "\n",
-       "        marker_94e66050864bf895f7a0cef3aa2f9838.bindPopup(popup_1a1ed9f4780f17ec083bbc8f3bf13662)\n",
+       "        marker_3b68215f0baefff2387f476653589e8f.bindPopup(popup_a9add213e6870f6d6dacf7b2a475b8aa)\n",
        "        ;\n",
        "\n",
        "        \n",
        "    \n",
        "    \n",
-       "            var marker_2e3b64a3c32d795affb0e919a7484702 = L.marker(\n",
+       "            var marker_37e2435e21d9183430feea35173f4df2 = L.marker(\n",
        "                [47.63389205932617, 8.694341659545898],\n",
        "                {}\n",
-       "            ).addTo(map_9338cc5010a7f0c3eda85de81ca3d8c9);\n",
+       "            ).addTo(map_8b975b7fcb962345f99cded064b99483);\n",
        "        \n",
        "    \n",
-       "        var popup_e407b885b41f7f7ff61cf747cd923b83 = L.popup({&quot;maxWidth&quot;: &quot;100%&quot;});\n",
+       "        var popup_0044546de869e65d9b6d8a86cab028ea = L.popup({&quot;maxWidth&quot;: &quot;100%&quot;});\n",
        "\n",
        "        \n",
        "            \n",
-       "                var html_0f980a44f27b15d9c0b7b6e158baa470 = $(`&lt;div id=&quot;html_0f980a44f27b15d9c0b7b6e158baa470&quot; style=&quot;width: 100.0%; height: 100.0%;&quot;&gt;Index: 2&lt;/div&gt;`)[0];\n",
-       "                popup_e407b885b41f7f7ff61cf747cd923b83.setContent(html_0f980a44f27b15d9c0b7b6e158baa470);\n",
+       "                var html_89d2c77c24836607809162ebac7f74ad = $(`&lt;div id=&quot;html_89d2c77c24836607809162ebac7f74ad&quot; style=&quot;width: 100.0%; height: 100.0%;&quot;&gt;Index: 2&lt;/div&gt;`)[0];\n",
+       "                popup_0044546de869e65d9b6d8a86cab028ea.setContent(html_89d2c77c24836607809162ebac7f74ad);\n",
        "            \n",
        "        \n",
        "\n",
-       "        marker_2e3b64a3c32d795affb0e919a7484702.bindPopup(popup_e407b885b41f7f7ff61cf747cd923b83)\n",
+       "        marker_37e2435e21d9183430feea35173f4df2.bindPopup(popup_0044546de869e65d9b6d8a86cab028ea)\n",
        "        ;\n",
        "\n",
        "        \n",
@@ -204,10 +204,10 @@
        "&lt;/html&gt;\" style=\"position:absolute;width:100%;height:100%;left:0;top:0;border:none !important;\" allowfullscreen webkitallowfullscreen mozallowfullscreen></iframe></div></div>"
       ],
       "text/plain": [
-       "<folium.folium.Map at 0x15c31b7b950>"
+       "<folium.folium.Map at 0x23db163dad0>"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 73,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -232,14 +232,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'attrs': {'detail': 'widmergasse 19 8466 truellikon 40 truellikon ch zh', 'featureId': '12870_0', 'geom_quadindex': '012232210032122231000', 'geom_st_box2d': 'BOX(694347.29027415 276686.7814323578,694347.29027415 276686.7814323578)', 'label': 'Widmergasse 19 <b>8466 Trüllikon</b>', 'lat': 47.63404846191406, 'lon': 8.694016456604004, 'num': 19, 'objectclass': '', 'origin': 'address', 'rank': 7, 'x': 276686.78125, 'y': 694347.3125, 'zoomlevel': 10}, 'id': 7251, 'weight': 1}\n"
+      "{'attrs': {'detail': 'widmergasse 19 8466 truellikon 40 truellikon ch zh', 'featureId': '12870_0', 'geom_quadindex': '012232210032122231000', 'geom_st_box2d': 'BOX(694347.29027415 276686.7814323578,694347.29027415 276686.7814323578)', 'label': 'Widmergasse 19 <b>8466 Trüllikon</b>', 'lat': 47.63404846191406, 'lon': 8.694016456604004, 'num': 19, 'objectclass': '', 'origin': 'address', 'rank': 7, 'x': 276686.78125, 'y': 694347.3125, 'zoomlevel': 10}, 'id': 7017, 'weight': 1}\n"
      ]
     }
    ],
@@ -260,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
@@ -353,7 +353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
@@ -380,6 +380,9 @@
    "source": [
     "import collada\n",
     "\n",
+    "kml = filtered_kml_data[0][0].split(\"\\\\\")[1]\n",
+    "model = filtered_kml_data[0][3].split(\"/\")[-1]\n",
+    "\n",
     "for data in filtered_kml_data:\n",
     "    kml_file = data[0]\n",
     "    lat = data[1]\n",
@@ -387,8 +390,8 @@
     "    href = data[3]\n",
     "    \n",
     "    # Load the COLLADA file\n",
-    "    coll = collada.Collada(\"swissBUILDINGS3D\\\\1052-11\\\\models\\\\model_2045.dae\")\n",
-    "    print (\"swissBUILDINGS3D\\\\1052-11\\\\models\\\\model_2045.dae\")\n",
+    "    coll = collada.Collada(\"swissBUILDINGS3D\\\\\"+kml+\"\\\\models\\\\\"+model)\n",
+    "    print (\"swissBUILDINGS3D\\\\\"+kml+\"\\\\models\\\\\"+model)\n",
     "    # Extract the geometry\n",
     "    print(coll)\n",
     "    print(coll.geometries)\n",
@@ -399,7 +402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -441,30 +444,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ebabed1c76c6474ead9a1eafab88a691",
+       "model_id": "c311f1360f5546b9b14614cd34845c04",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Scene(children=[PolyMesh(data=[], triangle_indices=array([  0,   1,   2,   3,   4,   5,   6,   7,   8,   9,  1…"
+       "Scene(children=[PolyMesh(data=[], triangle_indices=array([ 0,  1,  2,  3,  4,  5,  6,  7,  8,  9, 10, 11, 12, …"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 78,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "#Draw the whole building\n",
     "from ipygany import Scene\n",
     "\n",
-    "#Draws the geometry\n",
-    "scene = Scene([meshes[3]])\n",
+    "scene = Scene(meshes)\n",
     "scene"
    ]
   },
@@ -474,6 +477,13 @@
    "source": [
     "## Upload images from the building"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
