View for Walls and Roofs

--- a/getModelFromAddress.ipynb
+++ b/getModelFromAddress.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,14 +28,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'results': [{'attrs': {'detail': 'widmergasse 19 8466 truellikon 40 truellikon ch zh', 'featureId': '12870_0', 'geom_quadindex': '012232210032122231000', 'geom_st_box2d': 'BOX(694347.29027415 276686.7814323578,694347.29027415 276686.7814323578)', 'label': 'Widmergasse 19 <b>8466 Trüllikon</b>', 'lat': 47.63404846191406, 'lon': 8.694016456604004, 'num': 19, 'objectclass': '', 'origin': 'address', 'rank': 7, 'x': 276686.78125, 'y': 694347.3125, 'zoomlevel': 10}, 'id': 7017, 'weight': 1}, {'attrs': {'detail': 'widmergasse 19.1 8466 truellikon 40 truellikon ch zh', 'featureId': '210226908_0', 'geom_quadindex': '012232210032122310321', 'geom_st_box2d': 'BOX(694360.3364026649 276691.3415635696,694360.3364026649 276691.3415635696)', 'label': 'Widmergasse 19.1 <b>8466 Trüllikon</b>', 'lat': 47.634090423583984, 'lon': 8.694190979003906, 'num': 191, 'objectclass': '', 'origin': 'address', 'rank': 7, 'x': 276691.34375, 'y': 694360.3125, 'zoomlevel': 10}, 'id': 2125786, 'weight': 8}, {'attrs': {'detail': 'widmergasse 19.2 8466 truellikon 40 truellikon ch zh', 'featureId': '210226972_0', 'geom_quadindex': '012232210032301021330', 'geom_st_box2d': 'BOX(694372.001495032 276669.4795108603,694372.001495032 276669.4795108603)', 'label': 'Widmergasse 19.2 <b>8466 Trüllikon</b>', 'lat': 47.63389205932617, 'lon': 8.694341659545898, 'num': 192, 'objectclass': '', 'origin': 'address', 'rank': 7, 'x': 276669.46875, 'y': 694372.0, 'zoomlevel': 10}, 'id': 2122384, 'weight': 8}]}\n"
+      "{'results': [{'attrs': {'detail': 'widmergasse 19 8466 truellikon 40 truellikon ch zh', 'featureId': '12870_0', 'geom_quadindex': '012232210032122231000', 'geom_st_box2d': 'BOX(694347.29027415 276686.7814323578,694347.29027415 276686.7814323578)', 'label': 'Widmergasse 19 <b>8466 Trüllikon</b>', 'lat': 47.63404846191406, 'lon': 8.694016456604004, 'num': 19, 'objectclass': '', 'origin': 'address', 'rank': 7, 'x': 276686.78125, 'y': 694347.3125, 'zoomlevel': 10}, 'id': 7251, 'weight': 1}, {'attrs': {'detail': 'widmergasse 19.1 8466 truellikon 40 truellikon ch zh', 'featureId': '210226908_0', 'geom_quadindex': '012232210032122310321', 'geom_st_box2d': 'BOX(694360.3364026649 276691.3415635696,694360.3364026649 276691.3415635696)', 'label': 'Widmergasse 19.1 <b>8466 Trüllikon</b>', 'lat': 47.634090423583984, 'lon': 8.694190979003906, 'num': 191, 'objectclass': '', 'origin': 'address', 'rank': 7, 'x': 276691.34375, 'y': 694360.3125, 'zoomlevel': 10}, 'id': 2179151, 'weight': 8}, {'attrs': {'detail': 'widmergasse 19.2 8466 truellikon 40 truellikon ch zh', 'featureId': '210226972_0', 'geom_quadindex': '012232210032301021330', 'geom_st_box2d': 'BOX(694372.001495032 276669.4795108603,694372.001495032 276669.4795108603)', 'label': 'Widmergasse 19.2 <b>8466 Trüllikon</b>', 'lat': 47.63389205932617, 'lon': 8.694341659545898, 'num': 192, 'objectclass': '', 'origin': 'address', 'rank': 7, 'x': 276669.46875, 'y': 694372.0, 'zoomlevel': 10}, 'id': 2192574, 'weight': 8}]}\n"
      ]
     }
    ],
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -94,7 +94,7 @@
        "            &lt;meta name=&quot;viewport&quot; content=&quot;width=device-width,\n",
        "                initial-scale=1.0, maximum-scale=1.0, user-scalable=no&quot; /&gt;\n",
        "            &lt;style&gt;\n",
-       "                #map_8b975b7fcb962345f99cded064b99483 {\n",
+       "                #map_2a3505e109828c0326a108a27070a6c6 {\n",
        "                    position: relative;\n",
        "                    width: 100.0%;\n",
        "                    height: 100.0%;\n",
@@ -108,14 +108,14 @@
        "&lt;body&gt;\n",
        "    \n",
        "    \n",
-       "            &lt;div class=&quot;folium-map&quot; id=&quot;map_8b975b7fcb962345f99cded064b99483&quot; &gt;&lt;/div&gt;\n",
+       "            &lt;div class=&quot;folium-map&quot; id=&quot;map_2a3505e109828c0326a108a27070a6c6&quot; &gt;&lt;/div&gt;\n",
        "        \n",
        "&lt;/body&gt;\n",
        "&lt;script&gt;\n",
        "    \n",
        "    \n",
-       "            var map_8b975b7fcb962345f99cded064b99483 = L.map(\n",
-       "                &quot;map_8b975b7fcb962345f99cded064b99483&quot;,\n",
+       "            var map_2a3505e109828c0326a108a27070a6c6 = L.map(\n",
+       "                &quot;map_2a3505e109828c0326a108a27070a6c6&quot;,\n",
        "                {\n",
        "                    center: [47.63404846191406, 8.694016456604004],\n",
        "                    crs: L.CRS.EPSG3857,\n",
@@ -129,73 +129,73 @@
        "\n",
        "        \n",
        "    \n",
-       "            var tile_layer_1ab912f6c7f6fd00dee6e3517d7940c8 = L.tileLayer(\n",
+       "            var tile_layer_da352375bf73d5a2b3e6b830e666251a = L.tileLayer(\n",
        "                &quot;https://tile.openstreetmap.org/{z}/{x}/{y}.png&quot;,\n",
        "                {&quot;attribution&quot;: &quot;\\u0026copy; \\u003ca href=\\&quot;https://www.openstreetmap.org/copyright\\&quot;\\u003eOpenStreetMap\\u003c/a\\u003e contributors&quot;, &quot;detectRetina&quot;: false, &quot;maxNativeZoom&quot;: 19, &quot;maxZoom&quot;: 19, &quot;minZoom&quot;: 0, &quot;noWrap&quot;: false, &quot;opacity&quot;: 1, &quot;subdomains&quot;: &quot;abc&quot;, &quot;tms&quot;: false}\n",
        "            );\n",
        "        \n",
        "    \n",
-       "            tile_layer_1ab912f6c7f6fd00dee6e3517d7940c8.addTo(map_8b975b7fcb962345f99cded064b99483);\n",
+       "            tile_layer_da352375bf73d5a2b3e6b830e666251a.addTo(map_2a3505e109828c0326a108a27070a6c6);\n",
        "        \n",
        "    \n",
-       "            var marker_dc368257ca563fc4a5d8c923a325bde1 = L.marker(\n",
+       "            var marker_56f214d02a64547ac19193f3a19c0b8b = L.marker(\n",
        "                [47.63404846191406, 8.694016456604004],\n",
        "                {}\n",
-       "            ).addTo(map_8b975b7fcb962345f99cded064b99483);\n",
+       "            ).addTo(map_2a3505e109828c0326a108a27070a6c6);\n",
        "        \n",
        "    \n",
-       "        var popup_6d61fb4228bf24137f9aafba61b37cf8 = L.popup({&quot;maxWidth&quot;: &quot;100%&quot;});\n",
+       "        var popup_5971ac31c41d268bef69461936756bef = L.popup({&quot;maxWidth&quot;: &quot;100%&quot;});\n",
        "\n",
        "        \n",
        "            \n",
-       "                var html_7fc8dabd7827c7f86283bcb50d7302f7 = $(`&lt;div id=&quot;html_7fc8dabd7827c7f86283bcb50d7302f7&quot; style=&quot;width: 100.0%; height: 100.0%;&quot;&gt;Index: 0&lt;/div&gt;`)[0];\n",
-       "                popup_6d61fb4228bf24137f9aafba61b37cf8.setContent(html_7fc8dabd7827c7f86283bcb50d7302f7);\n",
+       "                var html_91a386042393cb512d2c04f77c7e3445 = $(`&lt;div id=&quot;html_91a386042393cb512d2c04f77c7e3445&quot; style=&quot;width: 100.0%; height: 100.0%;&quot;&gt;Index: 0&lt;/div&gt;`)[0];\n",
+       "                popup_5971ac31c41d268bef69461936756bef.setContent(html_91a386042393cb512d2c04f77c7e3445);\n",
        "            \n",
        "        \n",
        "\n",
-       "        marker_dc368257ca563fc4a5d8c923a325bde1.bindPopup(popup_6d61fb4228bf24137f9aafba61b37cf8)\n",
+       "        marker_56f214d02a64547ac19193f3a19c0b8b.bindPopup(popup_5971ac31c41d268bef69461936756bef)\n",
        "        ;\n",
        "\n",
        "        \n",
        "    \n",
        "    \n",
-       "            var marker_3b68215f0baefff2387f476653589e8f = L.marker(\n",
+       "            var marker_a4297a5192075bb45d2969191f6a18e3 = L.marker(\n",
        "                [47.634090423583984, 8.694190979003906],\n",
        "                {}\n",
-       "            ).addTo(map_8b975b7fcb962345f99cded064b99483);\n",
+       "            ).addTo(map_2a3505e109828c0326a108a27070a6c6);\n",
        "        \n",
        "    \n",
-       "        var popup_a9add213e6870f6d6dacf7b2a475b8aa = L.popup({&quot;maxWidth&quot;: &quot;100%&quot;});\n",
+       "        var popup_1bc683284f89106eba2d25be3694776d = L.popup({&quot;maxWidth&quot;: &quot;100%&quot;});\n",
        "\n",
        "        \n",
        "            \n",
-       "                var html_092c81be6bd2bd8940bafc18da59150b = $(`&lt;div id=&quot;html_092c81be6bd2bd8940bafc18da59150b&quot; style=&quot;width: 100.0%; height: 100.0%;&quot;&gt;Index: 1&lt;/div&gt;`)[0];\n",
-       "                popup_a9add213e6870f6d6dacf7b2a475b8aa.setContent(html_092c81be6bd2bd8940bafc18da59150b);\n",
+       "                var html_b6e2a25df8add70b9069f1894310d76a = $(`&lt;div id=&quot;html_b6e2a25df8add70b9069f1894310d76a&quot; style=&quot;width: 100.0%; height: 100.0%;&quot;&gt;Index: 1&lt;/div&gt;`)[0];\n",
+       "                popup_1bc683284f89106eba2d25be3694776d.setContent(html_b6e2a25df8add70b9069f1894310d76a);\n",
        "            \n",
        "        \n",
        "\n",
-       "        marker_3b68215f0baefff2387f476653589e8f.bindPopup(popup_a9add213e6870f6d6dacf7b2a475b8aa)\n",
+       "        marker_a4297a5192075bb45d2969191f6a18e3.bindPopup(popup_1bc683284f89106eba2d25be3694776d)\n",
        "        ;\n",
        "\n",
        "        \n",
        "    \n",
        "    \n",
-       "            var marker_37e2435e21d9183430feea35173f4df2 = L.marker(\n",
+       "            var marker_f0b2416695963fb3ecc9a4fb25383a61 = L.marker(\n",
        "                [47.63389205932617, 8.694341659545898],\n",
        "                {}\n",
-       "            ).addTo(map_8b975b7fcb962345f99cded064b99483);\n",
+       "            ).addTo(map_2a3505e109828c0326a108a27070a6c6);\n",
        "        \n",
        "    \n",
-       "        var popup_0044546de869e65d9b6d8a86cab028ea = L.popup({&quot;maxWidth&quot;: &quot;100%&quot;});\n",
+       "        var popup_d64476f4beabb3f37087838a5ed9a086 = L.popup({&quot;maxWidth&quot;: &quot;100%&quot;});\n",
        "\n",
        "        \n",
        "            \n",
-       "                var html_89d2c77c24836607809162ebac7f74ad = $(`&lt;div id=&quot;html_89d2c77c24836607809162ebac7f74ad&quot; style=&quot;width: 100.0%; height: 100.0%;&quot;&gt;Index: 2&lt;/div&gt;`)[0];\n",
-       "                popup_0044546de869e65d9b6d8a86cab028ea.setContent(html_89d2c77c24836607809162ebac7f74ad);\n",
+       "                var html_668813e7f3b5bafe9c66c3adf0a9b799 = $(`&lt;div id=&quot;html_668813e7f3b5bafe9c66c3adf0a9b799&quot; style=&quot;width: 100.0%; height: 100.0%;&quot;&gt;Index: 2&lt;/div&gt;`)[0];\n",
+       "                popup_d64476f4beabb3f37087838a5ed9a086.setContent(html_668813e7f3b5bafe9c66c3adf0a9b799);\n",
        "            \n",
        "        \n",
        "\n",
-       "        marker_37e2435e21d9183430feea35173f4df2.bindPopup(popup_0044546de869e65d9b6d8a86cab028ea)\n",
+       "        marker_f0b2416695963fb3ecc9a4fb25383a61.bindPopup(popup_d64476f4beabb3f37087838a5ed9a086)\n",
        "        ;\n",
        "\n",
        "        \n",
@@ -204,10 +204,10 @@
        "&lt;/html&gt;\" style=\"position:absolute;width:100%;height:100%;left:0;top:0;border:none !important;\" allowfullscreen webkitallowfullscreen mozallowfullscreen></iframe></div></div>"
       ],
       "text/plain": [
-       "<folium.folium.Map at 0x23db163dad0>"
+       "<folium.folium.Map at 0x20e84281810>"
       ]
      },
-     "execution_count": 73,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -232,22 +232,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'attrs': {'detail': 'widmergasse 19 8466 truellikon 40 truellikon ch zh', 'featureId': '12870_0', 'geom_quadindex': '012232210032122231000', 'geom_st_box2d': 'BOX(694347.29027415 276686.7814323578,694347.29027415 276686.7814323578)', 'label': 'Widmergasse 19 <b>8466 Trüllikon</b>', 'lat': 47.63404846191406, 'lon': 8.694016456604004, 'num': 19, 'objectclass': '', 'origin': 'address', 'rank': 7, 'x': 276686.78125, 'y': 694347.3125, 'zoomlevel': 10}, 'id': 7017, 'weight': 1}\n"
+      "{'attrs': {'detail': 'widmergasse 19 8466 truellikon 40 truellikon ch zh', 'featureId': '12870_0', 'geom_quadindex': '012232210032122231000', 'geom_st_box2d': 'BOX(694347.29027415 276686.7814323578,694347.29027415 276686.7814323578)', 'label': 'Widmergasse 19 <b>8466 Trüllikon</b>', 'lat': 47.63404846191406, 'lon': 8.694016456604004, 'num': 19, 'objectclass': '', 'origin': 'address', 'rank': 7, 'x': 276686.78125, 'y': 694347.3125, 'zoomlevel': 10}, 'id': 7251, 'weight': 1}\n"
      ]
     }
    ],
    "source": [
     "#Select the desired item\n",
     "index = int(input(\"Please enter the index of the item you want to select: \"))\n",
-    "selected_item = data['results'][index]\n",
-    "print(selected_item)\n"
+    "selected_building = data['results'][index]\n",
+    "print(selected_building)\n"
    ]
   },
   {
@@ -260,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -282,8 +282,8 @@
     "folder_path = \"swissBUILDINGS3D\"\n",
     "\n",
     "# Get the latitude and longitude from the selected_item\n",
-    "lat = float(selected_item['attrs']['lat'])\n",
-    "lon = float(selected_item['attrs']['lon'])\n",
+    "lat = float(selected_building['attrs']['lat'])\n",
+    "lon = float(selected_building['attrs']['lon'])\n",
     "print(f\"Latitude: {lat}\", f\"Longitude: {lon}\")\n",
     "\n",
     "# Define the calculate_distance function\n",
@@ -353,7 +353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -402,9 +402,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ -3.1614728   3.1393507 477.35        0.6268737   8.523992  476.011\n",
+      "  -4.5226707   6.318286  476.011       3.954176   -1.1537193 479.961\n",
+      "   0.6268737   8.523992  476.011      -3.1614728   3.1393507 477.35\n",
+      "   4.6439295  -0.8587421 479.961       0.6268737   8.523992  476.011\n",
+      "   3.954176   -1.1537193 479.961      -3.0441387  -4.1518803 479.961\n",
+      "  -3.1614728   3.1393507 477.35       -6.389766    1.7559415 477.35\n",
+      "   3.954176   -1.1537193 479.961      -3.1614728   3.1393507 477.35\n",
+      "  -3.0441387  -4.1518803 479.961      -3.0441387  -4.1518803 479.961\n",
+      "  -6.389766    1.7559415 477.35       -3.7338922  -4.4468575 479.961\n",
+      "   3.954176   -1.1537193 479.961       6.3897734  -4.935876  478.381\n",
+      "   4.6439295  -0.8587421 479.961      -3.0441387  -4.1518803 479.961\n",
+      "   6.3897734  -4.935876  478.381       3.954176   -1.1537193 479.961\n",
+      "  -1.9880483  -8.523992  478.381       6.3897734  -4.935876  478.381\n",
+      "  -3.0441387  -4.1518803 479.961      -1.9880483  -8.523992  478.381\n",
+      "  -3.0441387  -4.1518803 479.961      -3.7338922  -4.4468575 479.961    ]\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "from ipygany import PolyMesh\n",
@@ -438,19 +460,21 @@
     "    faces = np.array(faces)\n",
     "\n",
     "    # Create the PolyMesh\n",
-    "    mesh = PolyMesh(vertices=vertices, faces=faces)\n",
-    "    meshes.append(mesh)\n"
+    "    mesh = PolyMesh(vertices=vertices, triangle_indices=faces)\n",
+    "    meshes.append(mesh)\n",
+    "\n",
+    "print(meshes[0].vertices)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c311f1360f5546b9b14614cd34845c04",
+       "model_id": "c9bc09ae91e44165974751d70275464f",
        "version_major": 2,
        "version_minor": 0
       },
@@ -458,7 +482,7 @@
        "Scene(children=[PolyMesh(data=[], triangle_indices=array([ 0,  1,  2,  3,  4,  5,  6,  7,  8,  9, 10, 11, 12, …"
       ]
      },
-     "execution_count": 78,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -467,8 +491,64 @@
     "#Draw the whole building\n",
     "from ipygany import Scene\n",
     "\n",
-    "scene = Scene(meshes)\n",
-    "scene"
+    "sceneHouse = Scene(meshes)\n",
+    "sceneHouse"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "1a5b85c3017f44e0aee343537381e8c5",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Scene(children=[PolyMesh(data=[], triangle_indices=array([ 0,  1,  2,  3,  4,  5,  6,  7,  8,  9, 10, 11, 12, …"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "walls = [mesh for mesh in meshes if (mesh.vertices[2::3].max()- mesh.vertices[2::3].min())> 5]\n",
+    "\n",
+    "sceneWalls = Scene(walls)\n",
+    "sceneWalls\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "c43644b0f75b43a3ba503500034a57bf",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Scene(children=[PolyMesh(data=[], triangle_indices=array([ 0,  1,  2,  3,  4,  5,  6,  7,  8,  9, 10, 11, 12, …"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "roof = [mesh for mesh in meshes if not (mesh.vertices[2::3].max()- mesh.vertices[2::3].min())> 5]\n",
+    "\n",
+    "sceneRoof = Scene(roof)\n",
+    "sceneRoof"
    ]
   },
   {
